# hw-scraper

./: README.md  config.py  example_concurrent.py  example_usage.py  pyproject.toml  test_urls.json
docs/: API_REFERENCE.md  CRAWLER_SCRAPER_GUIDE.md
src/hw_scraper/: __init__.py  __main__.py  async_scraper.py  auth.py  batch_processor.py  cli.py  cli_enhanced.py  concurrency.py  config.py  downloader.py  models.py  organizer.py  parser.py  scraper.py  session_manager.py  utils.py  worker_pool.py
src/hw_scraper/crawler/: __init__.py  base_crawler.py  bfs_crawler.py  dfs_crawler.py  robots_parser.py  sitemap_parser.py
src/hw_scraper/scraper/: __init__.py  html_scraper.py  js_renderer.py  xpath_extractor.py
